--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,12 @@ dependencies:
     sdk: flutter
   provider:  
   flutter_slidable: ^0.6.0
+  cloud_firestore: ^2.4.0
+
+  
+  
+  
+  
 
 
   # The following adds the Cupertino Icons font to your application.
